<resources>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="app_name" translatable="false">Lost Cats</string>
    <string name="action_settings">Settings</string>
    <string name="list_fragment_label">Lost Cats List</string>
    <string name="login_user_fragment_label">Login</string>
    <string name="register_user_fragment_label">Register</string>
    <string name="add_cat_fragment_label">Add cat</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="detailed_cat_fragment_label">Cat details</string>
    <string name="continue_no_login">Continue without logging in</string>
    <string name="login">Login</string>
    <string name="sort">Sort</string>
    <string name="signout">Sign out</string>
    <string name="register">Register</string>
    <string name="contact">Contact</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="hint_email_login">Email</string>
    <string name="add_your_cat">Add cat</string>
    <string name="delete_dialog_title">Delete your cat</string>
    <string name="delete_dialog_message">Confirm deletion of cat "%1$s" with ID "%2$s"</string>
    <string name="welcome_snackbar">Welcome %1$s</string>

    <string name="no_cat_found">No cat found</string>
    <string name="password_error">No password</string>
    <string name="username_error">No username</string>
    <string name="not_logged_in_error">Not logged in</string>
    <string name="password_match_error">Passwords don\'t match</string>
    <string name="field_empty">Field empty</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="reward">Reward</string>
    <string name="userID">User</string>
    <string name="date">Date</string>

    <string name="id_with_colon">ID: %1$s</string>
    <string name="name_with_colon">Name: %1$s</string>
    <string name="desc_with_colon">Description: %1$s</string>
    <string name="place_with_colon">Place: %1$s</string>
    <string name="reward_with_colon">Reward: %1$s</string>
    <string name="userID_with_colon">User: %1$s</string>
    <string name="date_with_colon">Date: %1$s</string>

    <!-- Preference -->
    <string name="appearence_header">Appearance</string>
    <string name="language_header">Language</string>
    <string name="nightmode_title">Dark mode</string>
    <string name="language_title_set">Display language</string>
</resources>