<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lostcats.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:titleTextColor="@color/white"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:titleTextColor="@color/white"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="101"
        android:title="@string/signout"
        app:titleTextColor="@color/white"
        app:showAsAction="never" />
</menu>